Functionalized client side JS and fixed invisible data tags in charts

--- a/client/scss/base.scss
+++ b/client/scss/base.scss
@@ -21,7 +21,6 @@ html, body {
   font-size: 16px;
   font-family: "Ubuntu Monospace", monospace, sans-serif;
   background-color: $BACKGROUND;
-  color: #FFFFFF;
 }
 
 a, a:visited {
